--- a/index.html
+++ b/index.html
@@ -18,7 +18,14 @@
             movement, <a href="http://learnenough.com/email">sign up for our official email list</a> now.
         </p>
 
-        <img src="images/kitten.jpg" alt="A adorable kitten">
+        <p>
+          <a href="http://twitter.com/learnenough" target="_blank" style="text-decoration: none;">
+            <img src="images/small_twitter_logo.png" alt="twitter">
+          </a>
+          You should follow Learn Enough on Twitter <a href="http://twitter.com/learnenough">here</a>
+        </p>
+
+        <a href="http://cdn.learnenough.com/kitten.jpg"><img src="images/kitten.jpg" alt="an adoable kitten"></a>
 
     <h2>Background</h2>
 
