--- a/tags.html
+++ b/tags.html
@@ -5,7 +5,11 @@
     <meta charset="utf-8">
   </head>
   <body>
-
+    <div>
+      <a href="index.html">Home</a>
+      <a href="moby_dick.html">Moby Dick</a>
+      <a href="tags.html">HTML Tags</a>
+    </div>
     <h1>Important HTML Tags</h1>
 
     <a href="http://cdn.learnenough.com/storm_trooper_tagged.jpg"><img src="images/storm_trooper_tagged.jpg" alt="Tagged Storm Trooper"></a>
@@ -59,6 +63,26 @@
         <td><code>td</code></td>
         <td>table data</td>
         <td>include a table data cell</td>
+      </tr>
+      <tr>
+        <td><code>header</code></td>
+        <td>header section</td>
+        <td>introductory content or links</td>
+      </tr>
+      <tr>
+        <td><code>div</code></td>
+        <td>division</td>
+        <td>define a division of a webpage</td>
+      </tr>
+      <tr>
+        <td><code>ol</code></td>
+        <td>ordered list</td>
+        <td>make a list with a numbered ordering</td>
+      </tr>
+      <tr>
+        <td><code>ul</code></td>
+        <td>unordered list</td>
+        <td>make a list that has no ordering</td>
       </tr>
     </table>
 
@@ -114,6 +138,24 @@
         <td>display code</td>
         <td><code>&lt;code&gt;print("Hello, World!")&lt;/code&gt;</code></td>
         <td><code>print("Hello, World!")</code></td>
+      </tr>
+      <tr>
+        <td><code>span</code></td>
+        <td>span</td>
+        <td>define an inline division</td>
+        <td><code>&lt;span&gt;Hello, World&lt;/span&gt;</code></td>
+        <td><span>Hello, World</span></td>
+      </tr>
+      <tr>
+        <td><code>li</code></td>
+        <td>list item</td>
+        <td>an item to be used in an ol or ul</td>
+        <td><code>&lt;li&gt;list item&lt;/li&gt;</code></td>
+        <td>
+          <ul>
+            <li>list item</li>
+          </ul>
+        </td>
       </tr>
     </table>
   </body>
