--- a/tags.html
+++ b/tags.html
@@ -5,10 +5,10 @@
     <meta charset="utf-8">
   </head>
   <body>
-    <div>
-      <a href="index.html">Home</a>
-      <a href="moby_dick.html">Moby Dick</a>
-      <a href="tags.html">HTML Tags</a>
+    <div style="text-align: right;">
+      <a href="index.html" style="text-decoration: none;">Home</a>
+      <a href="tags.html" style="margin-left: 10px; text-decoration: none;">HTML Tags</a>
+      <a href="moby_dick.html" style="margin-left: 10px; text-decoration: none;">Moby Dick</a>
     </div>
     <h1>Important HTML Tags</h1>
 
@@ -84,6 +84,21 @@
         <td>unordered list</td>
         <td>make a list that has no ordering</td>
       </tr>
+      <tr>
+        <td><code>li</code></td>
+        <td>list item</td>
+        <td>include list item (in both ul and ol)</td>
+      </tr>
+      <tr>
+        <td><code>br</code></td>
+        <td>break</td>
+        <td>enter line break</td>
+      </tr>
+      <tr>
+        <td><code>blockquote</code></td>
+        <td>block quote</td>
+        <td>show formatted quotation</td>
+      </tr>
     </table>
 
     <h2>Inline Elements</h2>
@@ -146,16 +161,34 @@
         <td><code>&lt;span&gt;Hello, World&lt;/span&gt;</code></td>
         <td><span>Hello, World</span></td>
       </tr>
+    </table>
+
+    <h2>Document Tags</h2>
+    <table>
       <tr>
-        <td><code>li</code></td>
-        <td>list item</td>
-        <td>an item to be used in an ol or ul</td>
-        <td><code>&lt;li&gt;list item&lt;/li&gt;</code></td>
-        <td>
-          <ul>
-            <li>list item</li>
-          </ul>
-        </td>
+        <th>Tag</th>
+        <th>Name</th>
+        <th>Purpose</th>
+      </tr>
+      <tr>
+        <td><code>html</code></td>
+        <td>html</td>
+        <td>tag from which all others are children</td>
+      </tr>
+      <tr>
+        <td><code>head</code></td>
+        <td>head</td>
+        <td>the tag that contains the head material</td>
+      </tr>
+      <tr>
+        <td><code>body</code></td>
+        <td>body</td>
+        <td>the tag that contains the body material</td>
+      </tr>
+      <tr>
+        <td><code>meta</code></td>
+        <td>meta</td>
+        <td>provides metadata about the HTML page</td>
       </tr>
     </table>
   </body>
